# smu

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docs/: query_sqlite.md
smu/: dataset_pb2.py  find_noncanonical_smiles.py  make_sqlite.py  pipeline.py  pipeline_test.py  query_sqlite.py  query_sqlite_test.py  regen_proto.sh  run_tests.sh  smu_sqlite.py  smu_sqlite_test.py
smu/examples/: multiple_bond_topology.py  topology_query.py
smu/geometry/: bond_length_distribution.py  bond_length_distribution_test.py  bond_lengths.py  get_bond_length_distribution.py  reconcile_dupes.py  topology_from_geom.py  topology_from_geom_main.py  topology_from_geom_test.py  topology_molecule_test.py  utilities.py  utilities_test.py
smu/parser/: duplicate_groups.py  duplicate_groups_test.py  merge_bond_topologies.py  smu_atomic_input_verifier.py  smu_parser.py  smu_parser_lib.py  smu_parser_test.py  smu_roundtrip_verifier.py  smu_utils_lib.py  smu_utils_lib_test.py  smu_writer.py  smu_writer_lib.py
smu/parser/testdata/: final_mol.txt  x07_first_atomic2_input.inp
smu/tools/: .gitignore  clean_text_tester.py  extend_bond_dists.py  find_oo_bonds.py  new_topology_detection.py
