[tool.poetry]
name = "smu"
version = "0.1.0"
description = "Code for accessing the Small Molecule Universe, a scientific dataset"
authors = ["Patrick Riley <patriley@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
absl-py = ">=0.12.0"
numpy = ">=1.19.5"
pandas = ">=1.1.5"
parameterized = ">=0.8.1"
protobuf = ">=3.15.8"
python-snappy = ">=0.6.0"
rdkit-pypi = ">=2021.3.1.4"
scipy = ">=1.5.4"


[tool.poetry.group.dev.dependencies]
absl-py = ">=0.12.0"
apache-beam = ">=2.29.0"
google-cloud-bigquery = ">=2.31.0"
numpy = ">=1.19.5"
pandas = ">=1.1.5"
parameterized = ">=0.8.1"
protobuf = ">=3.15.8"
python-snappy = ">=0.6.0"
rdkit-pypi = ">=2021.3.1.4"
scipy = ">=1.5.4"
tensorflow = ">=2.5.0rc3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
